typo after moving the files around

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	 <link rel="stylesheet" type="text/css" href="stylesheets/magnetic_poetry.css"/>              
 	
 	 <script language="javascript" src="javascript/element_position.js" type="text/javascript"/>
-     <script language="javascript" src="javascripts/magnetic_poetry.js" type="text/javascript"/>  
-	 <script language="javascript" src="javascripts/scripts.js" type="text/javascript"/>           
+     <script language="javascript" src="javascript/magnetic_poetry.js" type="text/javascript"/>  
+	 <script language="javascript" src="javascript/scripts.js" type="text/javascript"/>           
 	</head>
     <body>      
 	   
