--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 	   
 	  <button onclick="create_magnets_from_text('fridge'); this.style.display='none';">Generate Magnets</button> 
       <div id="fridge">     
-	    With Karate I'll kick your ass Yeah Oh yeah I'm going to kick your  deriere yeah You broke the rules and now
-	    I'll cut off all of your pubic hair this is not the best song in the world no this is just a tribute I couldn't remember the greatest song in the world no this is a tribute woah to the greatest song in the world ah ha the greatest song in the world You've to to believe me And I wish you were there 
-	 
+	    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	  </div> 
 	  
        
